--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:title" content="雑記" />
 <meta property="og:url" content="https://odknt.github.io/" />
 <meta property="og:site_name" content="雑記" />
-<link rel="stylesheet" href="/scss/alchemy.min.50a4afbf7ec0f78079a81cd03d5e44d093a77464c2ec27d816f212a2e02e4ebc.css" integrity="sha256-UKSvv37A94B5qBzQPV5E0JOndGTC7CfYFvISouAuTrw=" media="screen">
+<link rel="stylesheet" href="/scss/alchemy.min.e9638cac06d205843adc1863e6ac9297bd981b6cb9b48c53f6d81170c0c72d01.css" integrity="sha256-6WOMrAbSBYQ63Bhj5qySl72YG2y5tIxT9tgRcMDHLQE=" media="screen">
 
 <title>雑記</title>
 
@@ -20,18 +20,16 @@
 <body><header>
 <a href="/" class="header-link"><h1>雑記</h1></a>
 <ul>
-<li><a href="/posts/" title="Posts">Posts</a></li>
 <li><a href="/categories/" title="Categories">Categories</a></li>
 <li><a href="/tags/" title="Tags">Tags</a></li>
 </ul>
 </header>
 <div id="container">
 <main>
+<section class="summary-container">
+<h1>Posts:</h1>
 <article class="summary">
-<h1>Summaries:</h1>
-<seciton class="article-summary">
-<dl class="summary-container">
-<dd>
+<section>
 <h3 class="article-title"><a href="/posts/bspwmbar/">bspwm 用ステータスバーを作った</a></h2>
 
 <time>Sun, 31 Mar 2019 16:45:31 JST</time>
@@ -41,11 +39,11 @@
 <div class="paragraph">
 <p><a href="https://github.com/jaagr/polybar">Polybar</a> に対する不満を解消するためにステータスバーを自作した。</p>
 </div>
-</dd>
-</dl>
-
-<dl class="summary-container">
-<dd>
+</section>
+</article>
+<hr>
+<article class="summary">
+<section>
 <h3 class="article-title"><a href="/posts/linux_secure_boot/">ArchLinux でセキュアブートする</a></h2>
 
 <time>Sun, 03 Feb 2019 13:38:17 JST</time>
@@ -55,11 +53,11 @@
 <div class="paragraph">
 <p>ThinkCentre M715q でセキュアブートしつつ Arch Linux を動かす。</p>
 </div>
-</dd>
-</dl>
-
-<dl class="summary-container">
-<dd>
+</section>
+</article>
+<hr>
+<article class="summary">
+<section>
 <h3 class="article-title"><a href="/posts/remastering_raspbian/">Raspbian イメージのリマスタリング</a></h2>
 
 <time>Sun, 03 Feb 2019 13:10:43 JST</time>
@@ -69,11 +67,11 @@
 <div class="paragraph">
 <p>ラズパイ用 OS「Raspbian」をカスタマイズして、大量にセットアップするときの手間を減らす。</p>
 </div>
-</dd>
-</dl>
-
-<dl class="summary-container">
-<dd>
+</section>
+</article>
+<hr>
+<article class="summary">
+<section>
 <h3 class="article-title"><a href="/posts/simple_terminal/">st の XIM/SIXEL 対応</a></h2>
 
 <time>Fri, 27 Jul 2018 11:24:21 JST</time>
@@ -83,14 +81,13 @@
 <div class="paragraph">
 <p><a href="https://github.com/odknt/st">GitHub</a> で管理してるやつ。</p>
 </div>
-</dd>
-</dl>
+</section>
+</article>
 
 </section><nav class="pagination">
 <div></div>
 <div></div>
 </nav>
-</article>
 </main>
 </div><footer>
 <p id="copy">&copy;&nbsp;odknt</p>
